fixed overflow

--- a/about/about.css
+++ b/about/about.css
@@ -1,6 +1,7 @@
 body{
     background-color: #ecccff;
     padding:50px;
+    overflow-x:hidden;
 }
 
 h1{
